--- a/pages/auth.html
+++ b/pages/auth.html
@@ -43,6 +43,10 @@
             class="input"
             id="email"
           />
+          <div>
+            <i class="fas fa-exclamation-circle failure-icon"></i>
+            <i class="far fa-check-circle success-icon"></i>
+          </div>
         </div>
         <div class="msg-wrapper">
           <label for="pass">პაროლი</label>
@@ -56,6 +60,10 @@
             name="password"
             class="input"
           />
+          <div>
+            <i class="fas fa-exclamation-circle failure-icon"></i>
+            <i class="far fa-check-circle success-icon"></i>
+          </div>
         </div>
         </div>
           <div class="restore-wrapper">
@@ -186,12 +194,20 @@
         </div>
           <div>
             <div class="input-icons">
-          <input
-            type="text"
-            id="region"
-            name="region"
-            class="input"
-          />
+              <select name="region" id="regions">
+                <option value="shida-kartli">შიდა-ქართლი</option>
+                <option value="kvemo-kartli">ქვემო-ქართლი</option>
+                <option value="samtskhe-javakheti">სამცხე-ჯავახეთი</option>
+                <option value="mtskheta-mtianeti">მცხეთა-მთიანეთი</option>
+                <option value="kakheti">კახეთი</option>
+                <option value="imereti">იმერეთი</option>
+                <option value="adjara">აჭარა</option>
+                <option value="samegrelo">სამეგრელო</option>
+                <option value="guria">გურია</option>
+                <option value="racha-lechkhumi">რაჭა-ლეჩხუმი</option>
+                <option value="svaneti">სვანეთი</option>
+                <option value="aphkhazeti">აფხაზეთი</option>
+              </select>
           <div>
           <i class="fas fa-exclamation-circle failure-icon"></i>
           <i class="far fa-check-circle success-icon"></i>
@@ -222,12 +238,20 @@
         </div>
           <div>
             <div class="input-icons">
-          <input
-            type="text"
-            id="grade"
-            class="grade input"
-            name="grade"
-          />
+          <select name="grade" id="grades">
+            <option value="I">I</option>
+            <option value="II">II</option>
+            <option value="III">III</option>
+            <option value="IV">IV</option>
+            <option value="V">V</option>
+            <option value="VI">VI</option>
+            <option value="VII">VII</option>
+            <option value="VIII">VIII</option>
+            <option value="IX">IX</option>
+            <option value="X">X</option>
+            <option value="XI">XI</option>
+            <option value="XII">XII</option>
+          </select>
           <div>
           <i class="fas fa-exclamation-circle failure-icon"></i>
           <i class="far fa-check-circle success-icon"></i>
@@ -306,95 +330,97 @@
       <section class="successful-pass-change" id="successful-pass-change">
         <h2>პაროლი წარმატებით შეიცვალა</h2>
       </section>
-      <section class="my-profile">
-        <form action="submit" class="my-profile-form" id="my-profile-form">
-          <h3>ჩემი პროფილი</h3>
+      <section class="my-profile" id="my-profile">
+        <h3>ჩემი პროფილი</h3>
           <div class="options-wrapper">
-            <p>ინფორმაციის რედაქტირება</p>
-            <p>პაროლის ცვლილება</p>
+            <p tabindex="0" class="profile-option">ინფორმაციის რედაქტირება</p>
+            <p tabindex="0" class="profile-option" id="profile-option-two">პაროლის ცვლილება</p>
           </div>
           <hr />
-          <div class="msg-wrapper">
-            <label for="pass">სახელი</label>
+        <form action="submit" class="my-profile-form" id="my-profile-form">
+             <label for="pass">სახელი</label>
           </div>
           <div>
             <div class="input-icons">
           <input
             type="text"
-            id="first_name"
+            id="my-profile-first_name"
             name="first_name"
             class="input"
           />
         </div>
         </div>
-        <div class="msg-wrapper">
-          <label for="pass">გვარი</label>
+         <label for="pass">გვარი</label>
         </div>
           <div>
             <div class="input-icons">
           <input
             type="text"
-            id="last_name"
+            id="my-profile-last_name"
             name="last_name"
             class="input"
           />
         </div>
         </div>
-        <div class="msg-wrapper">
-          <label for="pass">რეგიონი</label>
+         <label for="pass">რეგიონი</label>
         </div>
-          <div>
-          <input
-            type="text"
-            id="region"
-            name="region"
-            class="input"
-          />
-        </div>
-        <div class="msg-wrapper">
-          <label for="pass">სკოლა</label>
+          <select name="region" id="my-profile-regions">
+            <option value="shida-kartli">შიდა-ქართლი</option>
+            <option value="kvemo-kartli">ქვემო-ქართლი</option>
+            <option value="samtskhe-javakheti">სამცხე-ჯავახეთი</option>
+            <option value="mtskheta-mtianeti">მცხეთა-მთიანეთი</option>
+            <option value="kakheti">კახეთი</option>
+            <option value="imereti">იმერეთი</option>
+            <option value="adjara">აჭარა</option>
+            <option value="samegrelo">სამეგრელო</option>
+            <option value="guria">გურია</option>
+            <option value="racha-lechkhumi">რაჭა-ლეჩხუმი</option>
+            <option value="svaneti">სვანეთი</option>
+            <option value="aphkhazeti">აფხაზეთი</option>
+          </select>
+         <label for="pass">სკოლა</label>
         </div>
           <div>
             <div class="input-icons">
           <input
             type="text"
-            id="school"
+            id="my-profile-school"
             name="school"
             class="input"
           />
         </div>
-        </div>
-        <div class="msg-wrapper">
-          <label for="pass">კლასი</label>
-        </div>
-          <div>
-            <div class="input-icons">
-          <input
-            type="text"
-            id="grade"
-            class="grade input"
-            name="grade"
-          />
-        </div>
       </div>
-        <div class="msg-wrapper">
-          <label for="pass">ი-მეილი</label>
+         <label for="pass">კლასი</label>
+          <select name="grade" id="my-profile-grades">
+            <option value="I">I</option>
+            <option value="II">II</option>
+            <option value="III">III</option>
+            <option value="IV">IV</option>
+            <option value="V">V</option>
+            <option value="VI">VI</option>
+            <option value="VII">VII</option>
+            <option value="VIII">VIII</option>
+            <option value="IX">IX</option>
+            <option value="X">X</option>
+            <option value="XI">XI</option>
+            <option value="XII">XII</option>
+          </select>
+         <label for="pass">ი-მეილი</label>
         </div>
             <div class="input-icons">
           <input
             type="text"
             name="email"
             class="input"
-            id="register_email"
+            id="my-profile-register_email"
           />
         </div>
-        <div class="msg-wrapper">
-          <label for="pass">პაროლი</label>
+         <label for="pass">პაროლი</label>
         </div>
         <div class="input-icons">
           <input
             type="password"
-            id="new_password"
+            id="my-profile-new_password"
             name="new_password"
             class="input"
           />
@@ -402,13 +428,15 @@
           <div class="agree-policies-wrapper">
           <input
                 type="checkbox"
-                id="agree-policies"
+                id="my-profile-agree-policies"
                 name="agreement"
                 checked
-              /><label for="agreement">ვეთანხმები კონფიდენციალურობის პოლიტიკას და გამოყენების პირობებებს</label>
+              /><label for="agreement">ვეთანხმები <span>მონაცემების დამუშავებას</span></label>
             </div>
-        <button type="button" id="cancel" class="cancel-button">გაუქმება</button>
-          <button type="submit" class="enter" id="registration-button">შენახვა</button>
+        <div class="my-profile-buttons">
+          <button type="button" id="cancel-buttons" class="cancel-button">გაუქმება</button>
+          <button type="submit" class="enter" id="my-profile-button">შენახვა</button>
+        </div>
         </form>
       </section>
     </main>
