Add clicking functionalities on options tab

--- a/pages/auth.html
+++ b/pages/auth.html
@@ -333,7 +333,7 @@
       <section class="my-profile" id="my-profile">
         <h3>ჩემი პროფილი</h3>
           <div class="options-wrapper">
-            <p tabindex="0" class="profile-option">ინფორმაციის რედაქტირება</p>
+            <p tabindex="0" class="profile-option" id="profile-option-one">ინფორმაციის რედაქტირება</p>
             <p tabindex="0" class="profile-option" id="profile-option-two">პაროლის ცვლილება</p>
           </div>
           <hr />
