--- a/pages/about.html
+++ b/pages/about.html
@@ -28,16 +28,95 @@
         </ul>
       </nav>
     </header>
-    <h1 class="about-title">პროექტის შესახებ</h1>
-    <p class="about-project">
-      llorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. ut enim ad minim
-      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-      commodo consequat. duis aute irure dolor in reprehenderit in voluptate
-      velit esse cillum dolore eu fugiat nulla pariatur. excepteur sint occaecat
-      cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-      est laborum.
-    </p>
+    <section>
+      <div class="about-contaioner">
+        <div class="about-container-top-wrapper">
+          <div class="about-container-top">
+            <div class="about-container-top-about">
+              <h2>პროექტის შესახებ</h2>
+              <p>
+                საიტზე არის განთავსებული მათემატიკური ამოცანები, რომლებთა
+                ამოხსნაც python-ის პროგრამულ ენაზე დაწერილი კოდით გახდება
+                შესაძლებელი. კოდის დაწერას შეძლებთ საიტზე და აქვე მოხდება მისი
+                ავტომატური შემოწმება.
+              </p>
+            </div>
+            <div class="about-container-top-goal">
+              <h2>მიზანი</h2>
+              <p>აღმოვაჩინოთ ნიჭიერი პოტენციური პროგრამისტები.</p>
+            </div>
+          </div>
+        </div>
+        <div class="about-container-bottom-wrapper">
+          <div class="about-container-bottom">
+            <h2>პროექტზე მომუშავე გუნდი</h2>
+            <div class="about-container-bottom-team-info">
+              <div class="team-info">
+                <h4>სანდრო ასათიანი</h4>
+                <p>ოუნერი</p>
+              </div>
+              <div class="team-info">
+                <h4>თემო ჩიჩუა</h4>
+                <p>ოუნერი Back-End დეველოპერი</p>
+              </div>
+              <div class="team-info">
+                <h4>ანანო ასპანიძე</h4>
+                <p>პროექტის მენეჯერი (ჰედი)</p>
+              </div>
+              <div class="team-info">
+                <h4>ნენე არაბული</h4>
+                <p>დიზაინი (ჰედი)</p>
+              </div>
+              <div class="team-info">
+                <h4>მარიშა არაბული</h4>
+                <p>დიზაინი (ჰედი)</p>
+              </div>
+              <div class="team-info">
+                <h4>ეკატერინა ხარბედია</h4>
+                <p>დიზაინი (ჰედი)</p>
+              </div>
+              <div class="team-info">
+                <h4>ნოკა ყიფიანი</h4>
+                <p>Front-End დეველოპერი</p>
+              </div>
+              <div class="team-info">
+                <h4>დავით ცალანი</h4>
+                <p>Front-End დეველოპერი</p>
+              </div>
+              <div class="team-info">
+                <h4>დავით ჭინჭარაშვილი</h4>
+                <p>Back-End დეველოპერი</p>
+              </div>
+              <div class="team-info">
+                <h4>გიორგი მხეიძე</h4>
+                <p>პროექტის მენეჯერი</p>
+              </div>
+              <div class="team-info">
+                <h4>ოთო ბენიაიძე</h4>
+                <p>დიზაინი</p>
+              </div>
+              <div class="team-info">
+                <h4>ლუკა ბლიაძე</h4>
+                <p>Front-End დეველოპერი</p>
+              </div>
+              <div class="team-info">
+                <h4>მერი გოგიჩაშვილი</h4>
+                <p>Front-End დეველოპერი</p>
+              </div>
+              <div class="team-info">
+                <h4>გიორგი ბიწაძე</h4>
+                <p>Front-End დეველოპერი</p>
+              </div>
+              <div class="team-info">
+                <h4>ნიკა ქვრივიშვილი</h4>
+                <p>Back-End დეველოპერი</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="../js/navigation.js"></script>
     <script src="../js/app.js"></script>
     <script src="../js/api.js"></script>
