--- a/pages/not-found.html
+++ b/pages/not-found.html
@@ -49,7 +49,14 @@
         </div>
       </div>
     </section>
-
+    <footer>
+      <div class="div-1">
+        <p>კონფიდენციალურობის პოლიტიკა და გამოყენების პირობები</p>
+      </div>
+      <div class="div-2">
+        <p>copyright</p>
+      </div>
+    </footer>
     <script src="../js/navigation.js"></script>
     <script src="../js/app.js"></script>
     <script src="../js/api.js"></script>
