--- a/index.html
+++ b/index.html
@@ -297,6 +297,23 @@
         </div>
       </div>
     </section>
+    <!-- Pagination -->
+    <div class="pagination">
+      <!-- <span> &#9745;</span> -->
+      <button class="basebtn pre">
+        <img src="assets/arrow1.png" alt="" />
+      </button>
+      <a href="#" class="initionDecoration"> 01 </a>
+      <a href="#" class="initionDecoration"> 02 </a>
+      <a href="#" class="initionDecoration"> 03 </a>
+      <a href="#" class="initionDecoration"> 04 </a>
+      <a href="#" class="dots"> ... </a>
+      <a href="#" class="initionDecoration"> 40 </a>
+      <button class="basebtn next">
+        <img src="assets/arrow.png" alt="" />
+      </button>
+    </div>
+
     <footer>
       <div class="div-1">
         <p>კონფიდენციალურობის პოლიტიკა და გამოყენების პირობები</p>
