--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
         <!-- row -->
         <div class="card">
           <p>ორუცნობიანი განტოლებათა სისტემა და ფორმულა</p>
+          <div class="checkSign"><span> &#9745; 3/3</span></div>
           <img src="./assets/Ellipse 90.svg" alt="Ellipse" />
           <div class="tags-container">
             <div class="tag">ნინო ადამია</div>
@@ -197,6 +198,7 @@
         </div>
         <div class="card">
           <p>სამკუთხედის ფართობი</p>
+          <div class="checkSign"><span> &#9745; 3/3</span></div>
           <img src="./assets/Ellipse 90.svg" alt="Ellipse" />
           <div class="tags-container">
             <div class="tag">გიორგი თამაზაშვილი</div>
@@ -205,6 +207,7 @@
         </div>
         <div class="card">
           <p>ორუცნობიანი განტოლებათა სისტემა და ფორმულა</p>
+          <div class="checkSign"><span> &#9745; 3/3</span></div>
           <img src="./assets/Ellipse 90.svg" alt="Ellipse" />
           <div class="tags-container">
             <div class="tag">ნინო ადამია</div>
@@ -215,43 +218,7 @@
         </div>
         <div class="card">
           <p>სამკუთხედის ფართობი</p>
-          <img src="./assets/Ellipse 90.svg" alt="Ellipse" />
-          <div class="tags-container">
-            <div class="tag">გიორგი თამაზაშვილი</div>
-            <div class="tag">II</div>
-          </div>
-        </div>
-        <!-- row -->
-        <div class="card">
-          <p>ორუცნობიანი განტოლებათა სისტემა და ფორმულა</p>
-          <img src="./assets/Ellipse 90.svg" alt="Ellipse" />
-          <div class="tags-container">
-            <div class="tag">ნინო ადამია</div>
-            <div class="tag">ნინო ადამია</div>
-            <div class="tag">გიორგი თამაზაშვილი</div>
-            <div class="tag">IV</div>
-          </div>
-        </div>
-        <div class="card">
-          <p>სამკუთხედის ფართობი</p>
-          <img src="./assets/Ellipse 90.svg" alt="Ellipse" />
-          <div class="tags-container">
-            <div class="tag">გიორგი თამაზაშვილი</div>
-            <div class="tag">II</div>
-          </div>
-        </div>
-        <div class="card">
-          <p>ორუცნობიანი განტოლებათა სისტემა და ფორმულა</p>
-          <img src="./assets/Ellipse 90.svg" alt="Ellipse" />
-          <div class="tags-container">
-            <div class="tag">ნინო ადამია</div>
-            <div class="tag">ნინო ადამია</div>
-            <div class="tag">გიორგი თამაზაშვილი</div>
-            <div class="tag">IV</div>
-          </div>
-        </div>
-        <div class="card">
-          <p>სამკუთხედის ფართობი</p>
+          <div class="checkSign"><span> &#9745; 3/3</span></div>
           <img src="./assets/Ellipse 90.svg" alt="Ellipse" />
           <div class="tags-container">
             <div class="tag">გიორგი თამაზაშვილი</div>
@@ -261,6 +228,7 @@
         <!-- row -->
         <div class="card">
           <p>ორუცნობიანი განტოლებათა სისტემა და ფორმულა</p>
+          <div class="checkSign"><span> &#9745; 3/3</span></div>
           <img src="./assets/Ellipse 90.svg" alt="Ellipse" />
           <div class="tags-container">
             <div class="tag">ნინო ადამია</div>
@@ -271,6 +239,7 @@
         </div>
         <div class="card">
           <p>სამკუთხედის ფართობი</p>
+          <div class="checkSign"><span> &#9745; 3/3</span></div>
           <img src="./assets/Ellipse 90.svg" alt="Ellipse" />
           <div class="tags-container">
             <div class="tag">გიორგი თამაზაშვილი</div>
@@ -278,6 +247,28 @@
           </div>
         </div>
         <div class="card">
+          <p>ორუცნობიანი განტოლებათა სისტემა და ფორმულა</p>
+          <div class="checkSign"><span> &#9745; 3/3</span></div>
+          <img src="./assets/Ellipse 90.svg" alt="Ellipse" />
+          <div class="tags-container">
+            <div class="tag">ნინო ადამია</div>
+            <div class="tag">ნინო ადამია</div>
+            <div class="tag">გიორგი თამაზაშვილი</div>
+            <div class="tag">IV</div>
+          </div>
+        </div>
+        <div class="card">
+          <p>სამკუთხედის ფართობი</p>
+          <div class="checkSign"><span> &#9745; 3/3</span></div>
+          <img src="./assets/Ellipse 90.svg" alt="Ellipse" />
+          <div class="tags-container">
+            <div class="tag">გიორგი თამაზაშვილი</div>
+            <div class="tag">II</div>
+          </div>
+        </div>
+        <!-- row -->
+        <div class="card">
+          <div class="checkSign"><span> &#9745; 3/3</span></div>
           <p>ორუცნობიანი განტოლებათა სისტემა და ფორმულა</p>
           <img src="./assets/Ellipse 90.svg" alt="Ellipse" />
           <div class="tags-container">
@@ -289,6 +280,27 @@
         </div>
         <div class="card">
           <p>სამკუთხედის ფართობი</p>
+          <div class="checkSign"><span> &#9745; 3/3</span></div>
+          <img src="./assets/Ellipse 90.svg" alt="Ellipse" />
+          <div class="tags-container">
+            <div class="tag">გიორგი თამაზაშვილი</div>
+            <div class="tag">II</div>
+          </div>
+        </div>
+        <div class="card">
+          <p>ორუცნობიანი განტოლებათა სისტემა და ფორმულა</p>
+          <div class="checkSign"><span> &#9745; 3/3</span></div>
+          <img src="./assets/Ellipse 90.svg" alt="Ellipse" />
+          <div class="tags-container">
+            <div class="tag">ნინო ადამია</div>
+            <div class="tag">ნინო ადამია</div>
+            <div class="tag">გიორგი თამაზაშვილი</div>
+            <div class="tag">IV</div>
+          </div>
+        </div>
+        <div class="card">
+          <p>სამკუთხედის ფართობი</p>
+          <div class="nonCheckSign"><span> &#9745; 3/3</span></div>
           <img src="./assets/Ellipse 90.svg" alt="Ellipse" />
           <div class="tags-container">
             <div class="tag">გიორგი თამაზაშვილი</div>
