--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <body>
     <header>
       <nav>
+        <!-- LOGO  -->
         <div class="logo-wrapper">
           <img src="./assets/mathlogo.png" alt="logo" class="logo" />
         </div>
@@ -40,110 +41,195 @@
         <button type="button" class="filter-buttons">კლასი</button>
       </div>
       <div class="filter-container">
-        <!-- Slider main container -->
-        <div class="swiper">
-          <!-- Additional required wrapper -->
-          <div class="swiper-wrapper">
-            <!-- Slides -->
-            <div class="swiper-slide">
-              <div class="content-container">
-                <div class="item">
-                  <div class="circle"></div>
-                  <p>ფიგურები</p>
-                </div>
-                <div class="item">
-                  <div class="circle"></div>
-                  <p>ფიგურები</p>
-                </div>
-                <div class="item">
-                  <div class="circle"></div>
-                  <p>ფიგურები</p>
-                </div>
-                <div class="item">
-                  <div class="circle"></div>
-                  <p>ფიგურები</p>
-                </div>
-                <div class="item">
-                  <div class="circle"></div>
-                  <p>ფიგურები</p>
-                </div>
-                <div class="item">
-                  <div class="circle"></div>
-                  <p>ფიგურები</p>
-                </div>
-                <div class="item">
-                  <div class="circle"></div>
-                  <p>ფიგურები</p>
-                </div>
-                <div class="item">
-                  <div class="circle"></div>
-                  <p>ფიგურები</p>
-                </div>
-                <div class="item">
-                  <div class="circle"></div>
-                  <p>ფიგურები</p>
-                </div>
-                <div class="item">
-                  <div class="circle"></div>
-                  <p>ფიგურები</p>
-                </div>
-                <div class="item">
-                  <div class="circle"></div>
-                  <p>ფიგურები</p>
-                </div>
-                <div class="item">
-                  <div class="circle"></div>
-                  <p>ფიგურები</p>
-                </div>
+        <!-- Additional required wrapper -->
+        <div class="swiper-wrapper">
+          <!--Slider Left btn -->
+          <button class="pre-btn1">
+            <img src="assets/arrow1.png" alt="" />
+          </button>
+          <!-- Slides -->
+          <div class="swiper-slide">
+            <div class="content-container circle-container">
+              <div class="item">
+                <div class="circle"></div>
+                <p>ფიგურები</p>
+              </div>
+              <div class="item">
+                <div class="circle"></div>
+                <p>ფიგურები</p>
+              </div>
+              <div class="item">
+                <div class="circle"></div>
+                <p>ფიგურები</p>
+              </div>
+              <div class="item">
+                <div class="circle"></div>
+                <p>ფიგურები</p>
+              </div>
+              <div class="item">
+                <div class="circle"></div>
+                <p>ფიგურები</p>
+              </div>
+              <div class="item">
+                <div class="circle"></div>
+                <p>ფიგურები</p>
+              </div>
+              <div class="item">
+                <div class="circle"></div>
+                <p>ფიგურები</p>
+              </div>
+              <div class="item">
+                <div class="circle"></div>
+                <p>ფიგურები</p>
+              </div>
+              <div class="item">
+                <div class="circle"></div>
+                <p>ფიგურები</p>
+              </div>
+              <div class="item">
+                <div class="circle"></div>
+                <p>ფიგურები</p>
+              </div>
+              <div class="item">
+                <div class="circle"></div>
+                <p>ფიგურები</p>
+              </div>
+              <div class="item">
+                <div class="circle"></div>
+                <p>ფიგურები</p>
+              </div>
+              <div class="item">
+                <div class="circle"></div>
+                <p>ფიგურები</p>
+              </div>
+              <div class="item">
+                <div class="circle"></div>
+                <p>ფიგურები</p>
+              </div>
+              <div class="item">
+                <div class="circle"></div>
+                <p>ფიგურები</p>
+              </div>
+              <div class="item">
+                <div class="circle"></div>
+                <p>ფიგურები</p>
+              </div>
+              <div class="item">
+                <div class="circle"></div>
+                <p>ფიგურები</p>
+              </div>
+              <div class="item">
+                <div class="circle"></div>
+                <p>ფიგურები</p>
+              </div>
+              <div class="item">
+                <div class="circle"></div>
+                <p>ფიგურები</p>
+              </div>
+              <div class="item">
+                <div class="circle"></div>
+                <p>ფიგურები</p>
+              </div>
+              <div class="item">
+                <div class="circle"></div>
+                <p>ფიგურები</p>
+              </div>
+              <div class="item">
+                <div class="circle"></div>
+                <p>ფიგურები</p>
               </div>
             </div>
-            <div class="swiper-slide">Slide 2</div>
-            <div class="swiper-slide">Slide 3</div>
-            ...
           </div>
-          <!-- If we need pagination -->
-          <div class="swiper-pagination"></div>
-
-          <!-- If we need navigation buttons -->
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-button-next"></div>
-
-          <!-- If we need scrollbar -->
-          <div class="swiper-scrollbar"></div>
+          <!--Slider right btn -->
+          <button class="nxt-btn1">
+            <img src="assets/arrow.png" alt="" />
+          </button>
         </div>
       </div>
+
       <div class="filter-container">
-        <!-- Slider main container -->
-        <div class="swiper">
-          <!-- Additional required wrapper -->
-          <div class="swiper-wrapper">
-            <!-- Slides -->
-            <div class="swiper-slide">
-              <div class="content-container">
-                <div class="tag">ნინო ადამია</div>
-                <div class="tag">გიორგი თამაზაშვილი</div>
-                <div class="tag">ნინო ადამია</div>
-                <div class="tag">ია ია</div>
-                <div class="tag">გიორგი თამაზაშვილი</div>
-                <div class="tag">ია ფარულავა</div>
-                <div class="tag">თამაზ გრიგოლია</div>
-              </div>
+        <!-- Additional required wrapper -->
+
+        <div class="swiper-wrapper">
+          <!--Slider Left btn -->
+          <button class="pre-btn2">
+            <img src="assets/arrow1.png" alt="" />
+          </button>
+          <!-- Slides -->
+          <div class="swiper-slide">
+            <div class="content-container author-container">
+              <div class="tag test">ნინო ადამია</div>
+              <div class="tag test">გიორგი თამაზაშვილი</div>
+              <div class="tag test">ნინო ადამია</div>
+              <div class="tag test">ია ია</div>
+              <div class="tag test">გიორგი თამაზაშვილი</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">ია ფარულავა</div>
+              <div class="tag test">თამაზ გრიგოლია</div>
+              <div class="tag test">თამაზ გრიგოლია</div>
+              <div class="tag test">თამაზ გრიგოლია</div>
+              <div class="tag test">თამაზ გრიგოლია</div>
+              <div class="tag test">თამაზ გრიგოლია</div>
+              <div class="tag test">თამაზ გრიგოლია</div>
+              <div class="tag test">თამაზ გრიგოლია</div>
+              <div class="tag test">თამაზ გრიგოლია</div>
             </div>
-            <div class="swiper-slide">Slide 2</div>
-            <div class="swiper-slide">Slide 3</div>
-            ...
           </div>
-          <!-- If we need pagination -->
-          <div class="swiper-pagination"></div>
-
-          <!-- If we need navigation buttons -->
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-button-next"></div>
-
-          <!-- If we need scrollbar -->
-          <div class="swiper-scrollbar"></div>
+          <!--Slider Right btn -->
+          <button class="nxt-btn2">
+            <img src="assets/arrow.png" alt="" />
+          </button>
         </div>
       </div>
+      <!-- Class Container  -->
       <div class="filter-container">
         <div class="swiper">
           <!-- Additional required wrapper -->
@@ -165,23 +251,12 @@
                 <div class="tag">XII კლასი</div>
               </div>
             </div>
-            <div class="swiper-slide">Slide 2</div>
-            <div class="swiper-slide">Slide 3</div>
-            ...
           </div>
-          <!-- If we need pagination -->
-          <div class="swiper-pagination"></div>
-
-          <!-- If we need navigation buttons -->
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-button-next"></div>
-
-          <!-- If we need scrollbar -->
-          <div class="swiper-scrollbar"></div>
         </div>
       </div>
     </section>
 
+    <!-- Math tasks -->
     <section class="container">
       <div class="grid-container">
         <!-- row -->
@@ -300,7 +375,7 @@
         </div>
         <div class="card">
           <p>სამკუთხედის ფართობი</p>
-          <div class="nonCheckSign"><span> &#9745; 3/3</span></div>
+          <div class="nonCheckSign"><span> &#9745; 2/3</span></div>
           <img src="./assets/Ellipse 90.svg" alt="Ellipse" />
           <div class="tags-container">
             <div class="tag">გიორგი თამაზაშვილი</div>
@@ -327,6 +402,7 @@
     </div>
 
     <footer>
+      <!-- Copyright -->
       <div class="div-1">
         <p>კონფიდენციალურობის პოლიტიკა და გამოყენების პირობები</p>
       </div>
