Bugfix/hover_active

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <header>
       <nav>
         <div class="logo-wrapper">
-          <img src="./assets/mathlogo.png" alt="logo" class="logo" />
+          <a href="index.html">
+            <img src="./assets/mathlogo.png" alt="logo" class="logo" />
+          </a>
         </div>
         <ul class="nav-links">
           <li>
@@ -315,7 +317,7 @@
       <button class="basebtn pre">
         <img src="assets/arrow1.png" alt="" />
       </button>
-      <a href="#" class="initionDecoration"> 01 </a>
+      <a href="#" class="initionDecoration active"> 01 </a>
       <a href="#" class="initionDecoration"> 02 </a>
       <a href="#" class="initionDecoration"> 03 </a>
       <a href="#" class="initionDecoration"> 04 </a>
