--- a/index.html
+++ b/index.html
@@ -539,7 +539,9 @@
     <footer>
       <!-- Copyright -->
       <div class="div-1">
-        <p>კონფიდენციალურობის პოლიტიკა და გამოყენების პირობები</p>
+        <div class="div-1-a">
+          <a href="">კონფიდენციალურობის პოლიტიკა და გამოყენების პირობები</a>
+        </div>
       </div>
       <div class="div-2">
         <p>copyright</p>
