--- a/index.html
+++ b/index.html
@@ -538,8 +538,8 @@
 
     <footer>
       <!-- Copyright -->
-      <div class="div-1">
-        <div class="div-1-a">
+      <div class="copyRightDiv">
+        <div class="copyRightLink">
           <a href="">კონფიდენციალურობის პოლიტიკა და გამოყენების პირობები</a>
         </div>
       </div>
