--- a/pages/authorization.html
+++ b/pages/authorization.html
@@ -11,17 +11,17 @@
     <link rel="stylesheet" href="../css/global.css" />
     <title>Document</title>
   </head>
-  <body class="">
+  <body>
     <header>
       <nav>
         <a href="../index.html">
           <div class="logo-wrapper">
-            <img src="../assets/mathlogo.png" alt="logo" class="logo" />
+            <img src="../assets/mathlogo.png" alt="logo" class="logo"/>
           </div>
         </a>
-        <ul class="nav-links">
+        <ul class="nav-links"> 
           <li>
-            <a href="authorization.html" id="auth-link">ავტორიზაცია</a>
+            <a href="authorization.html" id="auth-link" class="activeHeaderColor">ავტორიზაცია</a>
           </li>
           <li>
             <a href="about.html">პროექტის შესახებ</a>
@@ -127,7 +127,14 @@
       <!-- Copyright -->
       <div class="copyRightDiv">
         <div class="copyRightLink">
-          <a href="">კონფიდენციალურობის პოლიტიკა და გამოყენების პირობები</a>
+          <a href="" class="privacy">კონფიდენციალურობის პოლიტიკა და გამოყენების პირობები</a>
+        </div>
+        <div>
+          <div class="contactList">
+            <p class="contact">კონტაქტი</p>
+            <p class="contactEmail"> <a href = "mailto: unilabinfo@iliauni.edu.ge" >unilabinfo@iliauni.edu.ge</a></p>
+            <p class="contactEmail"> <a href="https://www.facebook.com/"> Facebook</a></p> 
+          </div>
         </div>
       </div>
       <div class="div-2">
