--- a/pages/not-found.html
+++ b/pages/not-found.html
@@ -48,8 +48,19 @@
       </div>
     </section>
     <footer>
-      <div class="div-1">
-        <p>კონფიდენციალურობის პოლიტიკა და გამოყენების პირობები</p>
+      <!-- Copyright -->
+      <div class="copyRightDiv">
+        <div class="copyRightLink">
+          <a href="" class="privacy">კონფიდენციალურობის პოლიტიკა და გამოყენების პირობები</a>
+        </div>
+        <div>
+          <div class="contactList">
+            <p class="contact">კონტაქტი</p>
+            <p class="contactEmail"> <a href = "mailto: unilabinfo@iliauni.edu.ge" >unilabinfo@iliauni.edu.ge</a></p>
+            <p class="contactEmail"> <a href="https://www.facebook.com/"> Facebook</a></p> 
+
+          </div>
+        </div>
       </div>
       <div class="div-2">
         <p>copyright</p>
