--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
       src="https://code.jquery.com/jquery-1.7.1.min.js"
     ></script>
   </head>
-
   <body>
     <header>
       <nav>
@@ -537,14 +536,22 @@
       <!-- Copyright -->
       <div class="copyRightDiv">
         <div class="copyRightLink">
-          <a href="">კონფიდენციალურობის პოლიტიკა და გამოყენების პირობები</a>
+          <a href="" class="privacy">კონფიდენციალურობის პოლიტიკა და გამოყენების პირობები</a>
+        </div>
+        <div>
+          <div class="contactList">
+            <p class="contact">კონტაქტი</p>
+            <p class="contactEmail"> <a href = "mailto: unilabinfo@iliauni.edu.ge" >unilabinfo@iliauni.edu.ge</a></p>
+            <p class="contactEmail"> <a href="https://www.facebook.com/"> Facebook</a></p> 
+
+          </div>
         </div>
       </div>
       <div class="div-2">
         <p>copyright</p>
       </div>
     </footer>
-    <script src="./js/home.js"></script>
+    <script src="./js/home.js"></script> 
 
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
   </body>
