--- a/pages/about.html
+++ b/pages/about.html
@@ -7,7 +7,7 @@
     <title>About Project</title>
     <link rel="stylesheet" href="../css/global.css" />
   </head>
-  <body class="about-body">
+  <body class="about-body"> 
     <header>
       <nav>
         <a href="../index.html">
@@ -20,7 +20,7 @@
             <a href="authorization.html" id="auth-link">ავტორიზაცია</a>
           </li>
           <li>
-            <a href="about.html">პროექტის შესახებ</a>
+            <a href="about.html" class="activeHeaderColor">პროექტის შესახებ</a>
           </li>
 
         </ul>
@@ -115,8 +115,19 @@
       </div>
     </section>
     <footer>
-      <div class="div-1">
-        <p>კონფიდენციალურობის პოლიტიკა და გამოყენების პირობები</p>
+      <!-- Copyright -->
+      <div class="copyRightDiv">
+        <div class="copyRightLink">
+          <a href="" class="privacy">კონფიდენციალურობის პოლიტიკა და გამოყენების პირობები</a>
+        </div>
+        <div>
+          <div class="contactList">
+            <p class="contact">კონტაქტი</p>
+            <p class="contactEmail"> <a href = "mailto: unilabinfo@iliauni.edu.ge" >unilabinfo@iliauni.edu.ge</a></p>
+            <p class="contactEmail"> <a href="https://www.facebook.com/"> Facebook</a></p> 
+
+          </div>
+        </div>
       </div>
       <div class="div-2">
         <p>copyright</p>
