--- a/pages/authorization.html
+++ b/pages/authorization.html
@@ -16,12 +16,17 @@
       <nav>
         <a href="../index.html">
           <div class="logo-wrapper">
-            <img src="../assets/mathlogo.png" alt="logo" class="logo"/>
+            <img src="../assets/mathlogo.png" alt="logo" class="logo" />
           </div>
         </a>
-        <ul class="nav-links"> 
+        <ul class="nav-links">
           <li>
-            <a href="authorization.html" id="auth-link" class="activeHeaderColor">ავტორიზაცია</a>
+            <a
+              href="authorization.html"
+              id="auth-link"
+              class="activeHeaderColor"
+              >ავტორიზაცია</a
+            >
           </li>
           <li>
             <a href="about.html">პროექტის შესახებ</a>
@@ -75,7 +80,12 @@
             </button>
           </div>
           <button type="button" class="enter" id="enter">შესვლა</button>
-          <button type="button" class="registration" id="registration-on-auth">
+          <button
+            onclick="location.href='registration.html'"
+            type="button"
+            class="registration"
+            id="registration-on-auth"
+          >
             რეგისტრაცია
           </button>
         </form>
@@ -105,7 +115,12 @@
             </button>
             <button type="button" id="enter-send">გაგზავნა</button>
           </div>
-          <button type="button" class="registration" id="registration-on-email">
+          <button
+            onclick="location.href='registration.html'"
+            type="button"
+            class="registration"
+            id="registration-on-email"
+          >
             რეგისტრაცია
           </button>
         </form>
@@ -127,13 +142,21 @@
       <!-- Copyright -->
       <div class="copyRightDiv">
         <div class="copyRightLink">
-          <a href="" class="privacy">კონფიდენციალურობის პოლიტიკა და გამოყენების პირობები</a>
+          <a href="" class="privacy"
+            >კონფიდენციალურობის პოლიტიკა და გამოყენების პირობები</a
+          >
         </div>
         <div>
           <div class="contactList">
             <p class="contact">კონტაქტი</p>
-            <p class="contactEmail"> <a href = "mailto: unilabinfo@iliauni.edu.ge" >unilabinfo@iliauni.edu.ge</a></p>
-            <p class="contactEmail"> <a href="https://www.facebook.com/"> Facebook</a></p> 
+            <p class="contactEmail">
+              <a href="mailto: unilabinfo@iliauni.edu.ge"
+                >unilabinfo@iliauni.edu.ge</a
+              >
+            </p>
+            <p class="contactEmail">
+              <a href="https://www.facebook.com/"> Facebook</a>
+            </p>
           </div>
         </div>
       </div>
